# Stock-Portfolio

./: .gitignore  README.md  app.py  models.py  pyproject.toml  render.yaml  requirements.txt  test.py  testing.py  users.db
.github/workflows/: on-push.yml  on_merge.yml  on_push.yml
portfolio/static/: main.css
portfolio/templates/: create_portfolio.html  holdings.html
static/: main.css  portfolio.css
templates/: about.html  buy.html  contact.html  create_portfolio.html  edit_portfolio.html  index.html  layout.html  login.html  portfolio.html  portfolio_list.html  sell.html  signup.html
tests/: conftest.py  test_integration.py
